--- a/.github/workflows/link-check.yaml
+++ b/.github/workflows/link-check.yaml
@@ -11,4 +11,6 @@ jobs:
       - uses: gaurav-nelson/github-action-markdown-link-check@v1
         with:
           folder-path: src/
-          use-verbose-mode: true
+          use-quiet-mode: yes
+          use-verbose-mode: no
+          config-file: link-check.json
