--- a/.github/workflows/spell-check.yaml
+++ b/.github/workflows/spell-check.yaml
@@ -7,17 +7,17 @@ jobs:
   spell-check:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - name: setup python
-        uses: actions/setup-python@v2
+      - uses: actions/checkout@v3
+      - name: Setup Python
+        uses: actions/setup-python@v4
         with:
-          python-version: 3.8 
+          python-version: 3.11
       - name: check for wrapped links
         run: |
           python scripts/wordlist.py check wordlist.txt
-      - uses: actions/setup-node@v1
+      - uses: actions/setup-node@v3
         name: Run spell check
         with:
-          node-version: "14"
+          node-version: "18"
       - run: npm install -g cspell
       - run: cspell --config ./cspell.json
