--- a/.github/workflows/spell-check.yaml
+++ b/.github/workflows/spell-check.yaml
@@ -4,20 +4,12 @@ on:
   push:
 
 jobs:
-  spell-check:
+  spellcheck:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: Setup Python
-        uses: actions/setup-python@v4
+      # https://github.com/streetsidesoftware/cspell-action
+      - uses: streetsidesoftware/cspell-action@v3
         with:
-          python-version: 3.11
-      - name: check for wrapped links
-        run: |
-          python scripts/wordlist.py check wordlist.txt
-      - uses: actions/setup-node@v3
-        name: Run spell check
-        with:
-          node-version: "18"
-      - run: npm install -g cspell
-      - run: cspell --config ./cspell.json
+          incremental_files_only: true
+          config: '/cspell.json'
