--- a/.github/workflows/spell-check.yaml
+++ b/.github/workflows/spell-check.yaml
@@ -12,4 +12,4 @@ jobs:
       - uses: streetsidesoftware/cspell-action@v3
         with:
           incremental_files_only: true
-          config: '/cspell.json'
+          config: '.'
