--- a/.github/workflows/dco-check.yaml
+++ b/.github/workflows/dco-check.yaml
@@ -3,15 +3,15 @@ on: [pull_request]
 
 jobs:
   dco-check:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     name: commits check
     steps:
     - name: get commit 
       id: 'get-pr-commits'
-      uses: tim-actions/get-pr-commits@master
+      uses: tim-actions/get-pr-commits@v1
       with:
         token: ${{ secrets.GITHUB_TOKEN }}
     - name: dco check
-      uses: tim-actions/dco@master
+      uses: tim-actions/dco@v1
       with:
         commits: ${{ steps.get-pr-commits.outputs.commits }}
