--- a/.github/workflows/link-check.yaml
+++ b/.github/workflows/link-check.yaml
@@ -5,9 +5,9 @@ on:
 
 jobs:
   link-check:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     steps:
-      - uses: actions/checkout@master
+      - uses: actions/checkout@v4
       - uses: gaurav-nelson/github-action-markdown-link-check@v1
         with:
           folder-path: src/
