--- a/.github/workflows/orphaned-content-check.yaml
+++ b/.github/workflows/orphaned-content-check.yaml
@@ -5,14 +5,14 @@ on:
     
 jobs:
   orphaned-content-check:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     steps:
       - name: checkout repo content
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
       - name: setup python
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v5
         with:
-          python-version: 3.8 
+          python-version: "3.13"
       - name: check for orphaned content
         run: |
-          python tests/orphaned-content.py
+          python tests/orphaned-content.py --config tests/config.toml
